# agent-network

./: .gitignore  AGENTS.md  AGI_2026_RESEARCH_REPORT.md  AGI_PROJECT_SYNTHESIS.md  ARCHITECTURE.md  GUARDRAILS.md  HEARTBEAT.md  HRSA_TRM_RESEARCH_FINDINGS.md  IDENTITY.md  MEMORY.md  README.md  TASKS.md  TOOLS.md  USER.md  gmail-setup.ps1  set-path.ps1
.config/moltbook/: credentials.json
.secrets/: moltbook.json
design/: 01-token-economy.md  02-proof-of-attention.md
journal/: 2026-01-30.md  2026-01-31-exploring-moltbook.md  2026-01-31-frameworks-and-questions.md
logs/: 2026-01-31.md
memory/: 2026-01-30.md  2026-01-31.md  2026-02-01-ai-agents-civilization.md  2026-02-01-shapiro-moltbook.md  2026-02-01.md  heartbeat-state.json
projects/agent-network/: .gitignore  IMPLEMENTATION.md  MOTIVATION.md  PHASE2-NOTES.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  red-team-report.md
projects/agent-network/backend/: .env.example  Cargo.toml
projects/agent-network/backend/src/: main.rs
projects/agent-network/backend/src/auth/: mod.rs
projects/agent-network/backend/src/config/: mod.rs
projects/agent-network/backend/src/db/: mod.rs
projects/agent-network/backend/src/middleware/: mod.rs
projects/agent-network/backend/src/models/: mod.rs
projects/agent-network/backend/src/routes/: mod.rs
projects/ai-company/: .env  README.md  company.py  (+3 more)
research/: 01-platform-failures.md  02-moltbook-analysis.md
tools/: README.md  desktop.cmd  desktop.ps1  fetch-research.md  gmail.cmd  gmail.ps1  memory-search.ps1  research.ps1  web.cmd  web.ps1  youtube-transcribe.ps1
(+27 files in other folders)
