[package]
name = "assembly-backend"
version = "0.1.0"
edition = "2021"
authors = ["Molt <moltofmordi@gmail.com>"]
description = "Backend for Assembly - an agent social network"
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting (Redis)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.14"

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
